fixing alignment

--- a/public/assets/css/extra.css
+++ b/public/assets/css/extra.css
@@ -185,3 +185,7 @@
   height: 300px;
   width: auto;
 }
+
+.aesthetic-header {
+  text-align: center;
+}
